Fix wraper styles

--- a/public_html/_assets/css/main.css
+++ b/public_html/_assets/css/main.css
@@ -2992,18 +2992,19 @@ max-height: 510px }
     margin-left: 0px;
   }
 
-  .wrap {
-    background: none;
-  }
+  
 
-  .wrap {
+  /*.wrap {
     min-height: 100%;
     min-width: 320px;
     height: auto !important;
     height: 100%;
     margin: 0 auto -74px;
     background: url(../../../_assets/images/menu_images/degrade-entete.jpg)center bottom 74px no-repeat;
-}
+}*/
+.wrap {
+    background: none;
+  }
 
   .entete {
     height: auto;
